<resources>
    <string name="app_name">Wildlife Survival Test</string>
    <string name="app_version">Version %s</string>
    <string name="start_button">Start</string>
    <string name="start_description">One of our scientists asked: "How much hard is it to survive in the wild without having any survival skills?" Other scientists became interested in this issue and created a test
        to help find it out. Don\'t be shy, please sit down, today you will be among the test subjects!</string>
    <string name="start_button_continue">Continue</string>
    <string name="start_description_continue">This test subject won\'t last even a couple of hours in the wild, that\'s obvious!\n\nOh, are you here? Get back to the test, damn boy!</string>
    <string name="game_button_next">Next</string>
    <string name="game_button_finish">Finish</string>
    <string name="game_questions_counter">%1$d/%2$d</string>
    <string name="result_title">Test passed!</string>
    <string name="result_text_result_definitely_not_survive">You don\'t really stand a chance of survival, test subject. Most likely, the first spider you meet will kill you, even if it is not poisonous. Scientists believe that you will simply die of fright when you see it.
        To be more precise, you have about a %d%% chance of surviving in the wild, so it\'s better to stay at home and enjoy the city life!</string>
    <string name="result_text_result_probably_not_survive">When scientists saw you for the first time, many of them said that you would not last even an hour in the wild, and they started to bet real money on it. But they were wrong, you can last a couple of hours
        because you have about a %d%% chance for surviving in the wild. Now many scientists will have to eat only bread for a whole month, but still you should be careful in the wild, because you definitely won\'t last a couple of days there!</string>
    <string name="result_text_result_close_to_survive">You know, the chances of you surviving in the wild are pretty good, about %d%%. But scientists believe that in your case it\'s like a coin toss: you may be lucky, or you may not.
        Therefore, you\'re not bad, but if you stay alone in the wild, less snot, you have a hard way!</string>
    <string name="result_text_result_survive">You\'ve scored about a %d%% chance for surviving in the wild, scientists didn\'t expect you to have that much potential. Many of them were arguing  and fighting, and most likely soon the test will be destroyed and completely rewritten.
        But until this happens, you can celebrate your victory, because you are able to survive!</string>
    <string name="result_text_result_definitely_survive">We decided to call Bear Grylls to tell him about it. After all, scientists believe that you are a real master of survival. They are sure that if they give you a stone in your hands and strip you naked, this will not prevent
        you from living in the forest for your entire life. As a result, you scored a record %d%% chance to survive in the wild. Only a few are capable of this, congratulations!</string>
    <string name="result_text_notice">Scientists can finally relax and return home to their families, because writing such a super scientific test is not an easy task!\n
        If you liked the app, rate it or share the result with your friends, so that you can determine who of you can survive and who will be eaten by snails at the first day!\n</string>
    <string name="result_text_full">Scientists can finally relax and return home to their families, because writing such a super scientific test is not an easy task!\n
        If you liked the app, rate it or share the result with your friends, so that you can determine who of you can survive and who will be eaten by snails at the first day!\n
        If you want more tests like this one, support the scientists and their families, this way you will help to speed up the scientific process (%s) :) Good luck!\n</string>
    <string name="result_button_restart">Take test again</string>
    <string name="result_button_pay">Feed scientists</string>
    <string name="result_test_share">I passed a Wildlife Survival Test with this result:\n%s\nAny guesses about YOUR result?:)\n\nhttps://play.google.com/store/apps/details?id=com.wildlifesurvivaltest</string>
    <string name="dialog_connection_error_title">Internet connection error</string>
    <string name="dialog_connection_error_description">Oops, you need an Internet connection to use this app. Check your connection and try again</string>
    <string name="dialog_connection_error_button">Close</string>
    <string name="toast_choose_error">Please select an answer before further proceeding</string>
    <string name="question_1">First, we should explain you the rules of the game, test subject. With a high probability, you may not find the answer that suits you, because scientists are smart and won\'t let you choose what you want.
        Choose what is less likely to kill you in a dark and cold forest, so we will test your wits, okay?</string>
    <string name="question_1_answer_1">Sounds pretty scary. Are you sure you are scientists?</string>
    <string name="question_1_answer_2">Don\'t try to scare me, let\'s take your test!</string>
    <string name="question_1_answer_3">Got it, let\'s go!</string>
    <string name="question_2">You woke up in a cold sweat from a nightmare, looked around and realized that you were in some kind of a forest wilderness. How have you got here? No idea. The first thing you will do in such a situation:</string>
    <string name="question_2_answer_1">I\'ll remember everything that I have learned in my life, and I\'ll understand that life hasn\'t prepare me for this. Looks like this is the end.</string>
    <string name="question_2_answer_2">Most likely, I\'ll start crying loudly, maybe someone will hear and resque me!</string>
    <string name="question_2_answer_3">It\'s a pity I don\’t have one more pair of pants, because it\'ll be problematic to wash these after realizing it\'s my last day</string>
    <string name="question_2_answer_4">It\'s a pity that as a child I watched cartoons, and not the program "Ultimate Survival" with Bear Grylls, maybe I could have lasted a couple of days longer!</string>
    <string name="question_3">No matter how upsetting is the situation in which you found yourself, you have one useful little thing lying in your pocket, what is it?</string>
    <string name="question_3_answer_1">Condoms</string>
    <string name="question_3_answer_2">Mini Hadron Collider</string>
    <string name="question_3_answer_3">Toilet roll</string>
    <string name="question_3_answer_4">Garbage bag packaging</string>
    <string name="question_4">You are standing somewhere in the forest. You have 4 cardinal directions to choose from, where will you go and why?</string>
    <string name="question_4_answer_1">I\'ll go forward and rely on a blind luck.</string>
    <string name="question_4_answer_2">I\'ll go back, because when I turned around, I saw moss! It is a pity that I forgot the school lessons and don\'t remember what it means.</string>
    <string name="question_4_answer_3">I\'ll go to the left, like my father, who left for bread 15 years ago.</string>
    <string name="question_4_answer_4">I\'ll go to the right and turn right every 100 steps, this should help!</string>
    <string name="question_5">It\'s good that you are … by profession. Maybe it will help you survive!</string>
    <string name="question_5_answer_1">Stripper</string>
    <string name="question_5_answer_2">Beer taster</string>
    <string name="question_5_answer_3">Director of an adult diaper company</string>
    <string name="question_5_answer_4">Unemployed and homeless</string>
    <string name="question_6">You also have one ability that can be useful for survival:</string>
    <string name="question_6_answer_1">Hot hands. In the process of life, I have trained my hands so much that I can heat food with them faster than a microwave.</string>
    <string name="question_6_answer_2">Iron stomach. I can eat everything from sand to tree bark and still be alive.</string>
    <string name="question_6_answer_3">Immune to pain. As a child, I was beaten so often by my peers that I stopped feeling pain!</string>
    <string name="question_7">Imagine a situation. You are walking through a dark forest and suddenly you notice that someone is moving towards you. Looking closer, you understand that it is a bear! And most importantly, he noticed you! Your actions?</string>
    <string name="question_7_answer_1">Gotta run! No wonder I ran in the morning every day (at McDonald\'s).</string>
    <string name="question_7_answer_2">There is nowhere to run! I need to take the biggest stick and remind what Mortal Kombat taught me.</string>
    <string name="question_7_answer_3">I am Russian! A bear in the forest is an excellent means of transportation, like a business class taxi, otherwise I was already tired of walking. I\'m going to saddle him, he\'s just in time! Come here buddy!</string>
    <string name="question_7_answer_4">I\'ll start screaming and crying, if I haven\'t cried out all the tears yet. Perhaps the bear will be frightened by the noise and run away.</string>
    <string name="question_8">You are feeling severe hunger, so you need to try to get food in order to survive. This time you are lucky, scientists give you several food options to choose from, which one will you choose?</string>
    <string name="question_8_answer_1">A couple of Australian cockroaches</string>
    <string name="question_8_answer_2">Portion of mushrooms of unknown origin (looks edible)</string>
    <string name="question_8_answer_3">Handful of belladonna</string>
    <string name="question_8_answer_4">A couple of large green caterpillars</string>
    <string name="question_9">Let\'s move away from the topic of your possible imminent death in the forest and find out which of the qualities below are more suitable for you as a person.</string>
    <string name="question_9_answer_1">I am cunning, able to think sensibly, analyze the situation, but I am not capable of any bold deeds.</string>
    <string name="question_9_answer_2">I am strong, I have been involved in sports for the whole my life, but at the same time I have skipped school lessons and am not able to solve a simple first grade math problem.</string>
    <string name="question_9_answer_3">I am very smart, but I am not able to pull up on the uneven bars once, and after the first push-up, I will most likely faint.</string>
    <string name="question_9_answer_4">I am a jack-of-all-trades, able to build a house out of clay and create weapons out of sand, but at the same time I am also afraid of almost everything in the world.</string>
    <string name="question_10">Imagine that for survival in the forest, scientists are ready to give you a weapon of your choice, it can help you defend yourself from predators and get food, which weapon will you choose?</string>
    <string name="question_10_answer_1">Shiv</string>
    <string name="question_10_answer_2">Pointed piece of glass</string>
    <string name="question_10_answer_3">Wooden homemade spear</string>
    <string name="question_11">Imagine that the weapon did not help and you were bitten by a wild creature. Whose bite do you think will give you the best chance of survival?</string>
    <string name="question_11_answer_1">Grey wolf</string>
    <string name="question_11_answer_2">Reticulated python</string>
    <string name="question_11_answer_3">Tarantula</string>
    <string name="question_11_answer_4">Mad hermit man</string>
    <string name="question_12">Sooner or later you will be thirsty. You\'re in a forest, what do you think is a good indicator of water sources?</string>
    <string name="question_12_answer_1">The sun will show me the way, I will look for the rare sun rays and move in their direction.</string>
</resources>