<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_padding_size_20"
        android:layout_marginTop="@dimen/margin_padding_size_20"
        android:layout_marginEnd="@dimen/margin_padding_size_20"
        android:layout_marginBottom="@dimen/margin_padding_size_10"
        app:layout_constraintBottom_toTopOf="@+id/clResultButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_size_10">

            <TextView
                android:id="@+id/tvResultTitle"
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/result_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvResultDescription"
                style="@style/TextDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_padding_size_20"
                android:text="@string/result_text_result_definitely_not_survive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvResultTitle" />

            <TextView
                android:id="@+id/tvResultNotice"
                style="@style/TextDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_padding_size_16"
                android:text="@string/result_text_notice"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvResultDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clResultButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            style="@style/HalfButton"
            android:layout_marginEnd="@dimen/margin_padding_size_8"
            app:icon="@drawable/ic_share"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRestart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/btnRestart"
            app:layout_constraintTop_toTopOf="@+id/btnPay" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRateUs"
            style="@style/HalfButton"
            android:layout_marginStart="@dimen/margin_padding_size_8"
            app:icon="@drawable/ic_rate_us"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRestart"
            app:layout_constraintEnd_toEndOf="@+id/btnRestart"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toTopOf="@+id/btnPay"
            tools:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPay"
            style="@style/HalfButton"
            android:layout_marginStart="@dimen/margin_padding_size_8"
            android:layout_marginEnd="@dimen/margin_padding_size_8"
            android:maxLines="1"
            android:text="@string/result_button_pay"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/btnRestart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRestart"
            style="@style/MainButton"
            android:layout_marginBottom="@dimen/margin_padding_size_28"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_padding_size_40"
            android:paddingEnd="@dimen/margin_padding_size_40"
            android:text="@string/result_button_restart"
            app:autoSizeMaxTextSize="28sp"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>